files/server/manifests/cilium/30-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cilium
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: cilium
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        bluefin.io/platform: 'true'
        k8s-app: cilium
    spec:
      serviceAccountName: cilium
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      tolerations:
      - operator: Exists
      terminationGracePeriodSeconds: 30
      containers:
      - name: cilium-agent
        image: quay.io/cilium/cilium:v1.20.2@sha256:2939231d0d3e3ebddcd80fffa168b7ddcc78fdf0dc864d1c8c126ff523c54f01
        command:
        - cilium-agent
        args:
        - --config-dir=/tmp/cilium/config-map
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: '2'
            memory: 1Gi
        startupProbe:
          httpGet: &id001
            host: 127.0.0.1
            path: /healthz
            port: 9879
            httpHeaders:
            - name: brief
              value: 'true'
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 105
        readinessProbe:
          httpGet: *id001
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet: *id001
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 10
        lifecycle:
          preStop:
            exec:
              command:
              - /cni-uninstall.sh
        volumeMounts:
        - name: bpf-maps
          mountPath: /sys/fs/bpf
          mountPropagation: Bidirectional
        - name: cilium-run
          mountPath: /var/run/cilium
        - name: cilium-netns
          mountPath: /var/run/cilium/netns
          mountPropagation: HostToContainer
        - name: etc-cni-netd
          mountPath: /host/etc/cni/net.d
        - name: lib-modules
          mountPath: /lib/modules
          readOnly: true
        - name: xtables-lock
          mountPath: /run/xtables.lock
        - name: config
          mountPath: /tmp/cilium/config-map
          readOnly: true
      volumes:
      - name: bpf-maps
        hostPath:
          path: /sys/fs/bpf
          type: DirectoryOrCreate
      - name: cilium-run
        hostPath:
          path: /var/run/cilium
          type: DirectoryOrCreate
      - name: cilium-netns
        hostPath:
          path: /var/run/netns
          type: DirectoryOrCreate
      - name: cilium-cgroup
        hostPath:
          path: /run/cilium/cgroupv2
          type: DirectoryOrCreate
      - name: hostproc
        hostPath:
          path: /proc
          type: Directory
      - name: cni-path
        hostPath:
          path: /opt/cni/bin
          type: DirectoryOrCreate
      - name: etc-cni-netd
        hostPath:
          path: /etc/cni/net.d
          type: DirectoryOrCreate
      - name: lib-modules
        hostPath:
          path: /lib/modules
          type: Directory
      - name: xtables-lock
        hostPath:
          path: /run/xtables.lock
          type: FileOrCreate
      - name: config
        configMap:
          name: cilium-config
