files/server/manifests/cilium/40-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilium-operator
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cilium-operator
  template:
    metadata:
      labels:
        bluefin.io/platform: 'true'
        name: cilium-operator
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: cilium-operator
      nodeSelector:
        bluefin.io/controller: 'true'
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: cilium-operator
        image: quay.io/cilium/operator-generic:v1.20.2@sha256:64d8798350e8569b8e7622563fed6e44dce2625f311e4651b774816516c744fc
        command:
        - cilium-operator-generic
        args:
        - --config-dir=/tmp/cilium/config-map
        - --debug=false
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
          runAsGroup: 1001
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 512Mi
        livenessProbe:
          httpGet:
            host: 127.0.0.1
            path: /healthz
            port: 9234
        readinessProbe:
          httpGet:
            host: 127.0.0.1
            path: /healthz
            port: 9234
        volumeMounts:
        - name: config
          mountPath: /tmp/cilium/config-map
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: cilium-config
